# deepseek-v3-rust

./: .gitignore  Cargo.toml  index.html
book/: book.toml
book/src/: 01_intro.md  02_architecture.md  04_mla.md  05_moe.md  08_training.md  09_inference.md  SUMMARY.md
examples/: inference.rs  train.rs
src/: block.rs  config.rs  dsa.rs  embeddings.rs  lib.rs  main.rs  mla.rs  model.rs  moe.rs
website/: index.html
